# pixel-based-mad-learning

./: .gitignore  CITATION.bib  CITATION.cff  README.md  antmaze_download.py  main.py  pyproject.toml
configs/hilp/: antmaze-large.yaml  antmaze-medium.yaml
configs/maddist/: antmaze-large.yaml  antmaze-medium.yaml
configs/visual-hilp/: antmaze-large.yaml  antmaze-medium.yaml
configs/visual-maddist/: antmaze-large.yaml  antmaze-medium.yaml  montezumas-revenge.yaml
notebooks/: Montezuma's Revenge Dataset.ipynb  Visualise AntMaze.ipynb  Visualise Montezuma's Revenge.ipynb
src/: __init__.py  trainer.py
src/callbacks/: __init__.py  callback.py  maze_metrics.py  maze_visualiser.py
src/configs/: __init__.py  config.py  trainer_config.py
src/configs/callbacks/: __init__.py  callback_config.py  maze_metrics_config.py  maze_visualiser_config.py
src/configs/datasets/: __init__.py  dataset_config.py  hilp_dataset_config.py  maddist_dataset_config.py
src/configs/objectives/: __init__.py  hilp_config.py  maddist_config.py  objective_config.py
src/datasets/: __init__.py  dataset_wrapper.py  hilp_dataset.py  maddist_dataset.py
src/models/: __init__.py  atari_maddist_model.py  hilp_model.py  maddist_model.py  model.py  visual_hilp_model.py  visual_maddist_model.py
src/objectives/: __init__.py  hilp_encoder.py  maddist.py  objective.py
src/utils/: __init__.py  maddist_constraint_dataset_view.py  registrable.py  utils.py
